--- a/package.json
+++ b/package.json
@@ -1,53 +1,50 @@
 {
-  "name": "ngrxstore",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "core-js": "^2.4.1",
-    "ngrx": "^2.0.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
-  }
+    "name": "ngrxstore",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~11.0.4",
+        "@angular/common": "~11.0.4",
+        "@angular/compiler": "~11.0.4",
+        "@angular/core": "~11.0.4",
+        "@angular/forms": "~11.0.4",
+        "@angular/localize": "~11.0.4",
+        "@angular/platform-browser": "~11.0.4",
+        "@angular/platform-browser-dynamic": "~11.0.4",
+        "@angular/router": "~11.0.4",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+        "@ngrx/store": "^10.1.0",
+        "@ngrx/store-devtools": "^10.1.0",
+        "bootstrap": "^4.5.3",
+        "rxjs": "~6.6.3",
+        "tslib": "^2.0.3",
+        "zone.js": "~0.11.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1100.4",
+        "@angular/cli": "~11.0.4",
+        "@angular/compiler-cli": "~11.0.4",
+        "@types/jasmine": "~3.6.2",
+        "@types/node": "^14.14.13",
+        "codelyzer": "^6.0.1",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~6.0.0",
+        "karma": "~5.2.3",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "protractor": "~7.0.0",
+        "ts-node": "~9.1.1",
+        "tslint": "~6.1.0",
+        "typescript": "^4.0.5"
+    }
 }
